Navbar Fixed but not responsive and minor changes

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -6,7 +6,7 @@
 /* Rokkit */
 @import url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-/*  */
+/* Silkscreen */
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
 
 
@@ -148,15 +148,28 @@ body
 
 
 
+
+
 /* Header */
 
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body
+{
+    background-color: #14132a;
+}
 
 nav
 {
-    backdrop-filter: blur(13px);
+    backdrop-filter: blur(34px);
     position: fixed;
     width: 100%;
-    height: 10%;
+    height: 80px;
     top: 0;
     left: 0;
     right: 0;
@@ -167,18 +180,23 @@ nav
 }
 
 
-
-
-
-
 nav .navbar-left
 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-left: 5rem;
+}
+
+nav .navbar-left h1
+{
+    color: #f5f5f5;
+    display: none;
 }
 
 nav .navbar-left img
 {
-    width: 80px;
+    width: 6rem;
 }
 
 nav .navbar-right ul
@@ -213,14 +231,41 @@ nav .navbar-right ul li a:active
 }
 
 
-.content h1
-{
-    font-family: 'Silkscreen', sans-serif;
+@media (max-width: 1118px) {
+    nav .navbar-right ul {
+      margin: 0px 0px;
+    }
+    nav .navbar-right ul li {
+      margin: 0px 15px;
+    }
 }
+  
+@media (max-width: 970px) {
+    nav .navbar-left
+    {
+        margin-left: 1rem;
+        gap: 1rem;
+    }
 
-.version
-{
-    color: #88e714;
+    nav .navbar-left h1
+    {
+        display: inline;
+    }
+    nav .navbar-left #ham-icon {
+      display: inline;
+    }
+    nav .navbar-right ul {
+      display: none;
+    }
+}
+  
+@media (max-width: 410px) {
+    nav .navbar-left a h1 {
+      font-size: 1.2rem;
+    }
+    nav .navbar-left img {
+      width: 50px;
+    }
 }
 
 
@@ -349,7 +394,7 @@ nav .navbar-right ul li a:active
 
 #ham-icon
 {
-    /* display: none; */
+    display: none;
     color: white;
     font-size: 25px;
     margin: 0px 15px;
@@ -364,14 +409,6 @@ nav .navbar-right ul li a:active
         -ms-user-select: none;
             user-select: none;
 }
-
-
-
-
-
-
-
-
 
 
 
@@ -437,6 +474,17 @@ nav .navbar-right ul li a:active
     color: #14132a;
 }
 
+.content h1
+{
+    font-family: 'Silkscreen', sans-serif;
+}
+
+.version
+{
+    color: #88e714;
+}
+
+
 .hero-section .content
 {
     width: 100%;
@@ -477,6 +525,45 @@ nav .navbar-right ul li a:active
     font-size: 1.5rem;
     color: #14132a;
 }
+
+
+/* Media Queries for Hero Section */
+
+@media (max-aspect-ratio: 16/9)
+{
+    .video-wrapper
+    {
+        height: 100%;
+        width: 100vw;
+    }
+
+    .video-overlay
+    {
+        height: 100%;
+        width: 100vw;
+    }
+}
+
+
+
+@media (max-width: 1118px) {
+
+}
+  
+@media (max-width: 970px) {
+
+}
+  
+@media (max-width: 410px) {
+
+}
+
+
+
+
+
+
+
 
 
 /* Domains */
